# llm-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md  interface-contract.md
.github/workflows/: ci.yml  release.yml
config/crd/: llmprovider.yaml  llmworkload.yaml
config/rbac/: role.yaml  rolebinding.yaml
config/tls/: certificate.yaml  issuer.yaml
examples/: no-training-data-workload.yaml  no-training-opt-out-provider.yaml  ollama-provider.yaml  openrouter-provider.yaml  over-budget-workload.yaml  summarization-workload.yaml
helm/llm-operator/: Chart.yaml  values.yaml
helm/llm-operator/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  validatingwebhookconfiguration.yaml
helm/llm-operator/templates/crds/: llmprovider.yaml
helm/llm-operator/templates/rbac/: clusterrole.yaml  clusterrolebinding.yaml
src/: lib.rs  main.rs
src/controllers/: mod.rs  provider.rs  workload.rs
src/crd/: llm_provider.rs  llm_workload.rs  mod.rs
src/metrics/: mod.rs  registry.rs
src/routing/: mod.rs  strategy.rs
src/webhook/: admission.rs  mod.rs
tests/integration/: operator_test.rs
